# cheese3d

./: .buildinfo  .gitignore  CITATION.bib  LICENSE  README.md  USAGE.md  api.html  contributing.html  demo.ipynb  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  run-anipose.py  run-dlc.py  search.html  searchindex.js
.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree
.doctrees/guides/: hardware.doctree  installation.doctree  quick-start.doctree
.doctrees/howto/: regex.doctree
.doctrees/reference/: configuration.doctree
.github/workflows/: docs.yaml
_modules/: index.html
_modules/cheese3d/: cli.html  config.html  project.html  utils.html
_sources/: contributing.rst
_sources/guides/: installation.rst
cheese3d/: __init__.py  anatomy.py  anipose.py  behavior.py  cli.py  config.py  configutils.py  dlc.py  ffmpeg.py  project.py  readers.py  recording.py  regex.py  utils.py
cheese3d/backends/: core.py  dlc.py
cheese3d/synchronize/: core.py  readers.py
configs/: anipose-main.yaml  common.yaml  dlc-main.yaml  main.yaml
configs/anipose/: example-anipose.yaml
configs/dataset/: common.yaml  default-rig.yaml
configs/dataset/ephys/: allego.yaml  dsi.yaml  openephys.yaml
configs/dataset/metadata/: six-cam.yaml
configs/dataset/videos/: six-cam-view.yaml
configs/dlc/: common.yaml  example-dlc.yaml
docs/: README.md
docs/source/: api.rst  conf.py  hardware.rst  index.rst  installation.rst  quick-start.rst  usage.rst
docs/source/guides/: quick-start.rst
docs/source/howto/: regex.rst
docs/source/reference/: configuration.rst
guides/: hardware.html  installation.html  quick-start.html
hardware/: README.md  ffmpeg_filter.txt  final_headpost_design.stl  run-behavior.ps1
hardware/Arduino/manual_recording/: manual_recording.ino
hardware/Arduino/simple_LED_blink/: simple_LED_blink.ino
hardware/Bonsai-config/: 20230928_Bonsai_Behavior_6cam_hd.bonsai  20230928_Bonsai_Behavior_6cam_hd.bonsai.layout
howto/: regex.html
paper/: README.md  fig1-cheese3d-accuracy.ipynb  fig2-cheese3d-jitter-analysis.ipynb  fig3-cheese3d-general-anesthesia-eeg.ipynb  fig5-part2-cheese3d-synchronized-electrophysiology.ipynb
reference/: configuration.html
test/: config.yaml
